# mopro-app

./: .gitignore  Cargo.toml  README.md  README2.md  build.rs  problems-encountered.md
.github/workflows/: build-and-test.yml
android/app/src/main/java/com/mopro/mopro_app/: MainActivity.kt  MultiplierComponent.kt
circuits/: .gitignore  README.md  package-lock.json  package.json  pot12_0001.ptau
circuits/multiplier/: multiplier.circom  multiplier_0000.zkey  multiplier_0001.zkey  verification_key.json
ios/mopro-test/: ContentView.swift
ios/mopro-test.xcodeproj/: project.pbxproj
ios/mopro-test.xcodeproj/xcshareddata/xcschemes/: mopro-test.xcscheme
src/: lib.rs
tests/: test_generated_bindings.rs
