[package]
name = "mopro-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "mopro_bindings"

[[bin]]
name = "ios"

[features]
default = ["mopro-ffi/circom"]

[dependencies]
mopro-ffi = { path = "../mopro/mopro-ffi" }
#mopro-ffi = { git = "https://github.com/vimwitch/mopro.git", branch = "core-delete-2" }
uniffi = { version = "0.28", features = ["cli"] }
rust-witness = { git = "https://github.com/zkmopro/rust-witness.git" }
paste = "1.0.0"
num-bigint = "0.4.0"

[build-dependencies]

rust-witness = { git = "https://github.com/zkmopro/rust-witness.git" }
mopro-ffi = { path = "../mopro/mopro-ffi" }
#mopro-ffi = { git = "https://github.com/vimwitch/mopro.git", branch = "core-delete-2" }
uniffi = { version = "0.28", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.28", features = ["bindgen-tests"] }
